--- a/README
+++ b/README
@@ -1,3 +1,147 @@
 This is bomb 1341.
 
 It belongs to rtl64 (rtl64@scarletmail.rutgers.edu)
+
+Here is my process for defusing my bomb.
+
+Phase 1:
+Going into the bomb.s file, find the phase_1 section. It will look like this:
+0000000000001627 <phase_1>:
+    1627:	f3 0f 1e fa          	endbr64 
+    162b:	48 83 ec 08          	sub    $0x8,%rsp
+    162f:	48 8d 35 16 1b 00 00 	lea    0x1b16(%rip),%rsi        # 314c <_IO_stdin_used+0x14c>
+    1636:	e8 c0 04 00 00       	call   1afb <strings_not_equal>
+    163b:	85 c0                	test   %eax,%eax
+    163d:	75 05                	jne    1644 <phase_1+0x1d>
+    163f:	48 83 c4 08          	add    $0x8,%rsp
+    1643:	c3                   	ret    
+    1644:	e8 a1 07 00 00       	call   1dea <explode_bomb>
+    1649:	eb f4                	jmp    163f <phase_1+0x18>
+
+You can see that it is calling a function called strings not equal. Then there's a jne line that jumps to the explode bomb
+line if they are not euqal. Going into the debugger and stepping through, you want to look at what phrase your phrase is
+being compared to. The phrase that your input is being compared to is the answer to the first phase. In this case,
+the answer was "The early bird gets the worm."
+
+Phase 2:
+Going into the bomb.s file, find the phase_2 section. It will look like this:
+000000000000164b <phase_2>:
+    164b:	f3 0f 1e fa          	endbr64 
+    164f:	55                   	push   %rbp
+    1650:	53                   	push   %rbx
+    1651:	48 83 ec 28          	sub    $0x28,%rsp
+    1655:	64 48 8b 04 25 28 00 	mov    %fs:0x28,%rax
+    165c:	00 00 
+    165e:	48 89 44 24 18       	mov    %rax,0x18(%rsp)
+    1663:	31 c0                	xor    %eax,%eax
+    1665:	48 89 e6             	mov    %rsp,%rsi
+    1668:	e8 bf 07 00 00       	call   1e2c <read_six_numbers>
+    166d:	83 3c 24 01          	cmpl   $0x1,(%rsp)
+    1671:	75 07                	jne    167a <phase_2+0x2f>
+    1673:	83 7c 24 04 02       	cmpl   $0x2,0x4(%rsp)
+    1678:	74 05                	je     167f <phase_2+0x34>
+    167a:	e8 6b 07 00 00       	call   1dea <explode_bomb>
+    167f:	48 89 e5             	mov    %rsp,%rbp
+    1682:	bb 02 00 00 00       	mov    $0x2,%ebx
+    1687:	eb 0c                	jmp    1695 <phase_2+0x4a>
+    1689:	83 c3 01             	add    $0x1,%ebx
+    168c:	48 83 c5 04          	add    $0x4,%rbp
+    1690:	83 fb 06             	cmp    $0x6,%ebx
+    1693:	74 11                	je     16a6 <phase_2+0x5b>
+    1695:	89 d8                	mov    %ebx,%eax
+    1697:	03 45 00             	add    0x0(%rbp),%eax
+    169a:	39 45 08             	cmp    %eax,0x8(%rbp)
+    169d:	74 ea                	je     1689 <phase_2+0x3e>
+    169f:	e8 46 07 00 00       	call   1dea <explode_bomb>
+    16a4:	eb e3                	jmp    1689 <phase_2+0x3e>
+    16a6:	48 8b 44 24 18       	mov    0x18(%rsp),%rax
+    16ab:	64 48 2b 04 25 28 00 	sub    %fs:0x28,%rax
+    16b2:	00 00 
+    16b4:	75 07                	jne    16bd <phase_2+0x72>
+    16b6:	48 83 c4 28          	add    $0x28,%rsp
+    16ba:	5b                   	pop    %rbx
+    16bb:	5d                   	pop    %rbp
+    16bc:	c3                   	ret    
+    16bd:	e8 be fb ff ff       	call   1280 <__stack_chk_fail@plt>
+
+On line 38, it is calling a function called compare 6 numbers. Knowing this, we can assume that the answer will be 6 numbers.
+The bomb is going through each one of your numbers and comparing it to the answer. If a number is correct, it will jump
+over the explode bomb. If it is incorrect, it will explode. You can technically brute force to find the answer. Starting with
+the input 1 2 3 4 5 6, use the debugger to step through one step at a time. Check to see if the first number 1 explodes the 
+bomb. If it doesn't, you know that the first number is 1. If it does, then the first number is 1. If you continue this process,
+you will see the answer is 1 2 3 5 7 10.
+
+Phase 3:
+Going to the bomb.s file, find the phase_3 section. It will look like this:
+00000000000016c2 <phase_3>:
+    16c2:	f3 0f 1e fa          	endbr64 
+    16c6:	48 83 ec 18          	sub    $0x18,%rsp
+    16ca:	64 48 8b 04 25 28 00 	mov    %fs:0x28,%rax
+    16d1:	00 00 
+    16d3:	48 89 44 24 08       	mov    %rax,0x8(%rsp)
+    16d8:	31 c0                	xor    %eax,%eax
+    16da:	48 8d 4c 24 04       	lea    0x4(%rsp),%rcx
+    16df:	48 89 e2             	mov    %rsp,%rdx
+    16e2:	48 8d 35 44 1d 00 00 	lea    0x1d44(%rip),%rsi        # 342d <array.0+0x28d>
+    16e9:	e8 42 fc ff ff       	call   1330 <__isoc99_sscanf@plt>
+    16ee:	83 f8 01             	cmp    $0x1,%eax
+    16f1:	7e 1a                	jle    170d <phase_3+0x4b>
+    16f3:	83 3c 24 07          	cmpl   $0x7,(%rsp)
+    16f7:	77 65                	ja     175e <phase_3+0x9c>
+    16f9:	8b 04 24             	mov    (%rsp),%eax
+    16fc:	48 8d 15 7d 1a 00 00 	lea    0x1a7d(%rip),%rdx        # 3180 <_IO_stdin_used+0x180>
+    1703:	48 63 04 82          	movslq (%rdx,%rax,4),%rax
+    1707:	48 01 d0             	add    %rdx,%rax
+    170a:	3e ff e0             	notrack jmp *%rax
+    170d:	e8 d8 06 00 00       	call   1dea <explode_bomb>
+    1712:	eb df                	jmp    16f3 <phase_3+0x31>
+    1714:	b8 15 01 00 00       	mov    $0x115,%eax
+    1719:	39 44 24 04          	cmp    %eax,0x4(%rsp)
+    171d:	75 52                	jne    1771 <phase_3+0xaf>
+    171f:	48 8b 44 24 08       	mov    0x8(%rsp),%rax
+    1724:	64 48 2b 04 25 28 00 	sub    %fs:0x28,%rax
+    172b:	00 00 
+    172d:	75 49                	jne    1778 <phase_3+0xb6>
+    172f:	48 83 c4 18          	add    $0x18,%rsp
+    1733:	c3                   	ret    
+    1734:	b8 7d 01 00 00       	mov    $0x17d,%eax
+    1739:	eb de                	jmp    1719 <phase_3+0x57>
+    173b:	b8 bb 01 00 00       	mov    $0x1bb,%eax
+    1740:	eb d7                	jmp    1719 <phase_3+0x57>
+    1742:	b8 56 01 00 00       	mov    $0x156,%eax
+    1747:	eb d0                	jmp    1719 <phase_3+0x57>
+    1749:	b8 73 00 00 00       	mov    $0x73,%eax
+    174e:	eb c9                	jmp    1719 <phase_3+0x57>
+    1750:	b8 cb 03 00 00       	mov    $0x3cb,%eax
+    1755:	eb c2                	jmp    1719 <phase_3+0x57>
+    1757:	b8 b8 03 00 00       	mov    $0x3b8,%eax
+    175c:	eb bb                	jmp    1719 <phase_3+0x57>
+    175e:	e8 87 06 00 00       	call   1dea <explode_bomb>
+    1763:	b8 00 00 00 00       	mov    $0x0,%eax
+    1768:	eb af                	jmp    1719 <phase_3+0x57>
+    176a:	b8 0d 02 00 00       	mov    $0x20d,%eax
+    176f:	eb a8                	jmp    1719 <phase_3+0x57>
+    1771:	e8 74 06 00 00       	call   1dea <explode_bomb>
+    1776:	eb a7                	jmp    171f <phase_3+0x5d>
+    1778:	e8 03 fb ff ff       	call   1280 <__stack_chk_fail@plt>
+
+This one is a bit hard to explain, but this youtube video does a great job explaining how to diffuse this phase.
+https://www.youtube.com/watch?v=6QC_j7mL2c4 
+
+Phase 4: 
+Again, go to the bomb.s file and find the phase_4 section. It is very long, so I won't be pasting it here.
+What this phase is essentially doing, is it is looping through a 6 character string. It assigns each character a number
+then finds the sum of the string. That is the simplest way to put it. Again, you can brute force this. Step through the
+bomb with a string like abcdef. At each step, see what value it assigns a, b, c, d, e, and f. Take note of this. Continue 
+this process until you've tested every letter of the alphabet. There is a very important compare statement 
+cmp    %eax,0x4(%rsp). You should find the value of rsp and multiply by 4. This should be the sum of the string. Given
+the numbers you found, you should be able to make any 6 character string with any letter as long as their corresponding
+numbers equal the sum it is being compared to. In this case, the solution was apomoo.
+
+Phase 5:
+Again, go to the bomb.s file and find the phase_5 section. In short, the assembly code has 6 nodes. 5 nodes have values that
+you can find fairly easily by just stepping through the code. The last node, has a hidden value. The assembly code
+wants to know the order of the nodes from least to greatest (certain bombs may ask from greatest to least). Find the values
+of the 5 nodes and put them in order from least to greatest. Then you can brute force the rest. For example, I fonund the 
+order of the first 5 to be 2 5 4 3 1. From here, I tried 6 2 5 4 3 1 as my input and stepped through. If it exploded, I tried
+the next option which was 2 6 5 4 3 1 and so on. In this case, the solution was 2 5 4 3 6 1.
